--- a/build.gradle
+++ b/build.gradle
@@ -161,10 +161,11 @@ repositories {
         }
     }
     maven {url 'file://Storage/IdeaProjects/'}
+
     maven {
-        name = "AzureDoom Mods"
-        url = "https://maven.azuredoom.com/mods"
+        url "https://cursemaven.com"
     }
+
     //maven {url = "https://maven.kyrptonaught.dev"}
     // Put repositories for dependencies here
     // ForgeGradle automatically adds the Forge maven and Maven Central for you
@@ -200,7 +201,7 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    implementation "net.kyrptonaught.customportalapi:customportalapi-reforged1201:1.0.4"
+    implementation fg.deobf("curse.maven:CPAPI-621463:4704980")
     implementation fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
     implementation("com.eliotlash.mclib:mclib:20")
     //compile fileTree(dir: 'libs', include: '*.jar')
